bin/tests/errors_lexer/lexer/lex_err_missing_exponent.swg
#global fileprivate

1e // swc-expected-error {{lex_err_missing_exponent}}
